[tool.poetry]
name = "blockchain-stackoverflow"
version = "0.1.0"
description = "Scripts to explore Stackoverflow data for various blockchains"
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "blockchain_stackoverflow"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
