[tool.poetry]
name = "blockchain-stackoverflow"
version = "0.1.0"
description = "Scripts to explore Stackoverflow data for various blockchains"
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "blockchain_stackoverflow"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
ipython = "^8.15.0"
notebook = "^7.0.3"
ipdb = "^0.13.13"
fastparquet = "^2023.8.0"
ipykernel = "^6.25.1"
matplotlib = "^3.7.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
